--- a/client/bower.json
+++ b/client/bower.json
@@ -2,19 +2,20 @@
   "name": "client",
   "version": "0.0.0",
   "dependencies": {
-      "angular": "~1.2.0",
-      "angular-resource": "~1.2.0",
-      "angular-cookies": "~1.2.0",
-      "angular-sanitize": "~1.2.0",
-      "angular-animate": "~1.2.0",
-      "angular-route": "~1.2.0",
-      "angular-bootstrap": "~0.11.0",
-      "angular-local-storage": "~0.0.7",
-      "angular-socket-io": "~0.6.0",
-      "moment": "~2.8.3",
-      "json3": "~3.3.1",
-      "es5-shim": "~3.1.0",
-      "bootstrap-sass-official": "~3.2.0"
+    "angular": "~1.2.0",
+    "angular-resource": "~1.2.0",
+    "angular-cookies": "~1.2.0",
+    "angular-sanitize": "~1.2.0",
+    "angular-animate": "~1.2.0",
+    "angular-route": "~1.2.0",
+    "angular-bootstrap": "~0.11.0",
+    "angular-local-storage": "~0.0.7",
+    "angular-socket-io": "~0.6.0",
+    "moment": "~2.8.3",
+    "json3": "~3.3.1",
+    "es5-shim": "~3.1.0",
+    "bootstrap-sass-official": "~3.2.0",
+    "socket.io-client": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
