--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production nodemon ./bin/www",
-    "test": "NODE_ENV=development nodemon ./bin/www"
+    "start": "NODE_ENV=production nodemon ./server.js",
+    "test": "NODE_ENV=development nodemon ./server.js"
   },
   "dependencies": {
     "body-parser": "~1.6.6",
@@ -12,7 +12,10 @@
     "debug": "~1.0.4",
     "express": "~4.8.6",
     "jade": "~1.5.0",
+    "method-override": "^2.2.0",
     "morgan": "~1.2.3",
+    "neo4j": "^1.1.0",
+    "node-uuid": "^1.4.1",
     "serve-favicon": "~2.0.1",
     "socket.io": "^1.1.0"
   }
