--- a/client/bower.json
+++ b/client/bower.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-scenario": "~1.2.0",
+    "angular-socket.io-mock": "~0.0.2"
   },
   "appPath": "app"
 }
