--- a/client/bower.json
+++ b/client/bower.json
@@ -15,7 +15,8 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "bootstrap-sass-official": "~3.2.0",
-    "socket.io-client": "~1.1.0"
+    "socket.io-client": "~1.1.0",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
