--- a/client/bower.json
+++ b/client/bower.json
@@ -16,7 +16,8 @@
     "es5-shim": "~3.1.0",
     "bootstrap-sass-official": "~3.2.0",
     "socket.io-client": "~1.1.0",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "ng-breadcrumbs": "~0.1.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
